# scriptoria

./: .gitignore  .prettierignore  CONTRIBUTING.md  README.md  eslint.config.js  package.json  project-roadmap.md  security_architecture.md  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
.svelte-kit/: ambient.d.ts
.svelte-kit/output/client/.vite/: manifest.json
.svelte-kit/output/client/_app/: version.json
.svelte-kit/output/client/_app/immutable/assets/: 0.DF7vAftp.css
.svelte-kit/output/client/_app/immutable/chunks/: BHzlky7M.js  CGO84EJ7.js
.svelte-kit/output/client/_app/immutable/entry/: app.BGtjDDO0.js  start.B_udeZGL.js
.svelte-kit/output/client/_app/immutable/nodes/: 0.C0yx0l-6.js  1.BlPDD6Gj.js  2.CRQweNB3.js
.svelte-kit/output/server/: index.js  internal.js  manifest-full.js  remote-entry.js
.svelte-kit/output/server/.vite/: manifest.json
.svelte-kit/output/server/_app/immutable/assets/: _layout.CCTG0dro.css
.svelte-kit/output/server/chunks/: environment.js  exports.js  internal.js  shared.js  svelte-vendor.js  utils.js
.svelte-kit/output/server/entries/fallbacks/: error.svelte.js
.svelte-kit/output/server/entries/pages/: _layout.svelte.js  _layout.ts.js  _page.svelte.js
.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
src/: app.html
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/.sqlx/: query-22ac6e56d173e9c080087fd3ca3e82a1c17b1b9f37a83247324a01747d00af41.json  query-710cf6c4098ab3a246ab1ccfc7d72c8cdfc0dd1a69a85cf2aed0a2105697e221.json  query-7aa2e74680b3666e41fca15879d6ad193a45d39b4a135dc43bd13498aebb3abf.json  query-80c3b669eca49749646748b3f28b41ecb60f7b58b8c1e19d7a41aadded55d7b5.json  query-8d73735868e1d4320eed4a60bc8144e94591c15cfab931d7ddd63d0158b3d3f9.json  query-a3ef30f9f21c769e2aba0ea4ab76d0bd30623851040db26bade35216258b412b.json  query-a79fbc352d8cfd2dbe909eeb9260518e6b1bf96c5c09e45d0819dd8f2ab372f2.json  query-b5a42b7dcdc187e3c319e4a67a2e684444a06222ebd5fdd65f4a9acfa3f2f557.json  query-bf367903cebbf3e289e18cf884fa558c573cd5cec53168e05a106dcffc289d77.json  query-cb3e02fc7cb33917f8675b1241f34e45ba8bfc6c247153fcc5f4c914d7d9fad8.json  query-d3a000750178f4a8494fbad78fb02ce87f64b553c907354b408ba6b3560028e3.json  query-e4423fc281b9e53b6725cb134bc3c830f713a33741ebf9639a95f07b2a1de10c.json  query-f02109f0aba1c5d516961135a9b792c158fd6765e5a107f7a3ec2632dc63bbdc.json
src-tauri/migrations/: 20251220220048_initial_schema.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/commands/: documents.rs  mod.rs
src-tauri/src/db/: documents.rs  mod.rs
src-tauri/src/encryption/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/tests/: command_integration_test.rs  integration_test.rs
src/lib/editor/: Editor.svelte
src/lib/editor/toolbar/: Toolbar.svelte  ToolbarButton.svelte  ToolbarDivider.svelte
src/lib/stores/: editor-store.test.ts  editor-store.ts
src/lib/types/: tauri-types.ts
src/routes/: +layout.svelte  +page.svelte  layout.css
src/routes/editor-demo/: +page.svelte
