[package]
name = "scriptoria"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "scriptoria_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
tauri-plugin-opener = "2.5.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database & SQLite
sqlx = { version = "0.8.6", features = [
	"sqlite",
	"macros",
	"migrate",
	"chrono",
	"runtime-tokio-native-tls",
] }

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }

# Encryption
chacha20poly1305 = "0.10.1"
argon2 = "0.5.3"
blake3 = "1.8.2"
zeroize = "1.8.2"
rand_core = { version = "0.9.3", features = ["os_rng"] }
hex = "0.4.3"

# Keyring
keyring = "3.6.3"

# Time handling
time = { version = "0.3.44", features = ["serde", "macros"] }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Logging
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Environment variables
dotenvy = "0.15.7"
