[package]
name = "scriptoria"
version = "0.1.0"
description = "A Tauri App"
# authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "scriptoria_lib"

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
blake3 = "1.8.3"
# Encryption
chacha20poly1305 = "0.10.1"
# Environment variables
dotenvy = "0.15.7"
hex = "0.4.3"
# Keyring
keyring = "3.6.3"
rand = { version = "0.10.0", features = ["sys_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Database & SQLite
sqlx = { version = "0.8.6", features = [
	"chrono",
	"macros",
	"migrate",
	"runtime-tokio-native-tls",
	"sqlite",
] }
tauri = { version = "2.10.2", features = ["test"] }
tauri-plugin-opener = "2.5.3"
# Error handling
thiserror = "2.0.18"
# Time handling
time = { version = "0.3.47", features = ["macros", "serde"] }
# Async runtime
tokio = { version = "1.49.0", features = ["full"] }
# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.21.0", features = ["serde", "v4"] }
zeroize = "1.8.2"

[dev-dependencies]
serial_test = "3.4.0"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }
